# ormolu

./: Cargo.toml  README.md
ormolu/: Cargo.toml  README.md
ormolu/src/: lib.rs  test.rs
ormolu_cli/: Cargo.toml  generate.rs  main_old.rs  traits.rs
ormolu_cli/ideas/: macro1.rs
ormolu_cli/postgres/: mod.rs
ormolu_cli/src/: main.rs
ormolu_cli/src/generate/: mod.rs
ormolu_cli/src/generate/postgres/: mod.rs
ormolu_interfaces/: Cargo.toml  README.md
ormolu_interfaces/src/: error.rs  field.rs  lib.rs  naming.rs  traits.rs
ormolu_interfaces/src/data_type/: mod.rs
ormolu_interfaces/src/data_type/character/: char.rs  mod.rs  var_char.rs
ormolu_interfaces/src/data_type/constraint/: check.rs  foreign_key.rs  identity.rs  mod.rs  primary_key.rs  unique.rs
ormolu_interfaces/src/data_type/numeric/: integer.rs  mod.rs  serial.rs  small_int.rs
ormolu_interfaces/src/database/: mod.rs
ormolu_interfaces/src/field/: filter.rs  mod.rs
ormolu_interfaces/src/field/types/: boolean.rs  integer.rs  mod.rs  primary_key.rs  string.rs
ormolu_interfaces/src/sql_command/: mod.rs
ormolu_interfaces/src/sql_command/query/: command.rs  mod.rs  query_builder.rs  query_set.rs  where_cond.rs
ormolu_interfaces/src/sql_command/query/query_builder/: mod.rs
ormolu_interfaces/src/sql_command/query/query_set/: field_filter.rs  mod.rs
ormolu_interfaces/src/traits/: database_object.rs  mod.rs  stored_procedure.rs  table.rs  view.rs
ormolu_macro/: Cargo.toml
ormolu_macro/src/: lib.rs
ormolu_macros/: Cargo.toml  README.md
ormolu_macros/src/: database_object.rs  derive.rs  lib.rs  table_metadata.rs  utils.rs
src/: main.rs
src/postgres/: mod.rs
