[package]
name = "ormolu"
version = "0.1.0"
edition = "2024"

[dependencies]
ormolu_macros = { path = "../ormolu_macros" }
ormolu_interfaces = { path = "../ormolu_interfaces" }


sqlx = { version = "0.7.4", features = [
    "postgres",
    "runtime-tokio-native-tls",
] }
url = { version = "2.2", default-features = false }
tokio = { version = "1", features = ["full"] }
# quote = "1.0"
# syn = "2.0"
# proc-macro2 = "1.0"
convert_case = "0.6.0"
chrono = "0.4.38"
phf = { version = "0.11", features = ["macros"] }
futures = "0.3.31"
