[package]
name = "ormolu_interfaces"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { version = "0.7.4", features = [
    "postgres",
    "chrono",
    "runtime-tokio-native-tls",
] }
phf = { version = "0.11", features = ["macros"] }
dotenvy = "0.15.7"
thiserror = "2.0.12"
futures = "0.3.31"
