[package]
name = "ormolu_macros"
version = "0.1.0"
edition = "2021"

[dependencies]
syn = { version = "2.0.52", default-features = false, features = [
    "full",
    "derive",
    "parsing",
    "printing",
    "clone-impls",
] }
quote = "1.0"
proc-macro2 = "1.0"
ormolu_interfaces = { path = "../ormolu_interfaces" }
sqlx-macros-core = { version = "=0.8.6", features = ["derive"] }
sqlx-macros = "=0.8.6"

[lib]
proc-macro = true
doctest = false
